First web file 2.0

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>
-        Hello Angular js 
+        I can wait to start this course, and i will kill it. 
         </h1>
     </body>
 
